Fixing z-index for items on screen
Former-commit-id: 9183fcf242ab4bea849f7a7b6e0f22dc9ea21ee7

--- a/v2/frontend/src/app/modules/offer_type/views/offer_type.component.scss
+++ b/v2/frontend/src/app/modules/offer_type/views/offer_type.component.scss
@@ -29,6 +29,7 @@ mat-icon {
 .video-container {
     position: relative;
     margin-bottom: 40px;
+    z-index: 10;
 }
 
 .spinner-element {
@@ -41,6 +42,7 @@ mat-icon {
 }
 
 .edit_box {
+    z-index: 11;
     position: fixed;
     top: 25%;
     right: 10%;
